# USGS-DLG

./: DLGAttribute.cpp  DLGAttribute.h  DLGElement.cpp  DLGElement.h  DLGHeader.cpp  DLGHeader.h  DLGLine.cpp  DLGLine.h  DLGPoint.cpp  DLGPoint.h  DLGPointElement.cpp  DLGPointElement.h  DLGUtil.cpp  DLGUtil.h  Makefile.in  README.md  configure  configure.in  dlg.dsp  dlg.plg  typedefs.h
config/: mkinstalldirs
